# ComfyUI-AnimatedLinks

./: README.md  pyproject.toml
ComfyUI-AnimatedLinks/: __init__.py
web/: animated_links.js
